syntax = "proto3";
package canto.inflation.v1;

import "gogoproto/gogo.proto";

import "canto/inflation/v1/inflation.proto";

option go_package = "github.com/Canto-Network/canto/v3/x/inflation/types";

// GenesisState defines the inflation module's genesis state.
message GenesisState {
  // params defines all the paramaters of the module.
  Params params = 1 [ (gogoproto.nullable) = false ];
  // amount of past periods, based on the epochs per period param
  uint64 period = 2;
  // inflation epoch identifier
  string epoch_identifier = 3;
  // number of epochs after which inflation is recalculated
  int64 epochs_per_period = 4;
  // number of epochs that have passed while inflation is disabled
  uint64 skipped_epochs = 5;
}

// Params holds parameters for the inflation module.
message Params {
  // type of coin to mint
  string mint_denom = 1;
  // variables to calculate exponential inflation
  ExponentialCalculation exponential_calculation = 2
    [ (gogoproto.nullable) = false ];
  // inflation distribution of the minted denom
  InflationDistribution inflation_distribution = 3
    [ (gogoproto.nullable) = false ];
  // parameter to enable inflation and halt increasing the skipped_epochs
  bool enable_inflation = 4;
}
