syntax = "proto3";
package evmos.recovery.v1;

import "google/api/annotations.proto";
import "gogoproto/gogo.proto";
import "evmos/recovery/v1/genesis.proto";

option go_package = "github.com/evmos/evmos/v6/x/recovery/types";

// Query defines the gRPC querier service.
service Query {
  // Params retrieves the total set of recovery parameters.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/evmos/recovery/v1/params";
  }
}

// QueryParamsRequest is the request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is the response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params defines the parameters of the module.
  Params params = 1 [ (gogoproto.nullable) = false ];
}
